tearchan-horde/src/v2/snapshots/tearchan_horde__v2__test__typed_any_collection_grouped_by_entities-2.snap
---
source: tearchan-horde/src/v2/mod.rs
expression: "collection.get::<JumpState>()"

---
Some(
    [
        Action {
            raw: JumpState,
            entity_id: 2,
            ty: Start {
                time: 0,
            },
        },
    ],
)
