tearchan-horde/src/v2/snapshots/tearchan_horde__v2__test__typed_any_collection_grouped_by_entities-3.snap
---
source: tearchan-horde/src/v2/mod.rs
expression: "collection.get::<MoveState>()"

---
Some(
    [
        Action {
            raw: MoveState,
            entity_id: 1,
            ty: Start {
                time: 0,
            },
        },
    ],
)
